# Quill

./: LICENSE  README.md  cpp_parser.py  create_quill_dir.py  git.py  install_git_hook.py  js_parser.py  main.py  map_parsers.py  preflight.py  pyproject.toml  python_parser.py  write.py
.quill/: project_documentation.md
hooks/: post-commit.bat  post-commit.sh
quill/: __init__.py  cpp_parser.py  git_check.py  js_parser.py  preflight.py  write.py
quill.egg-info/: PKG-INFO  SOURCES.txt
quill/hooks/: post-commit.bat  post-commit.sh
quill_doc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
